# test_boto_education

./: COMMENTS.md  README.md  pyproject.toml  settings.py
src/: api.py  core.py  database.py  main.py  models.py  services.py  utils.py
tests/: test_shorten.py
