[project]
name = "test-boto-education"
version = "0.1.0"
description = ""
authors = [
    {name = "KandybaVladimir",email = "vladimirkandyba944@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi (>=0.128.3,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
